--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             webkit.messageHandlers.segue.postMessage('https://magnum.htvkubestage.htvapps.com/api/v1/KHTV/content/44600933');
         }
         function goOutside() {
-            webkit.messageHandlers.segue.postMessage('https://www.wesh.com/');
+            webkit.messageHandlers.segue.postMessage('https://www.amazon.com/');
         }
         function isNative() {
             const isNative = localStorage.getItem("isNative");
