--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <body onload="isNative()">
         <h2>This web page is running on <span id="message"></span></h1>
 
-        <button onClick='goInside();'>Open another article inside the app</button>
-        <button onClick='goOutside();'>Open external site inside the app</button>
-        <button onClick='goAndroid();'>Open external site inside the app - Android Test</button>
+        <button onClick='goiOSInside();'>Open another article inside the app - iOS</button>
+        <button onClick='goiOSOutside();'>Open external site inside the app - iOS</button>
+        <button onClick='goAndroidInside();'>Open another article inside the app - Android</button>
+        <button onClick='goAndroidOutside();'>Open external site inside the app - Android</button>
     </body>
     <script>
-        function goInside() {
+        function goiOSInside() {
             webkit.messageHandlers.segue.postMessage('https://magnum.htvkubestage.htvapps.com/api/v1/KHTV/content/44600933');
         }
-        function goAndroid() {
-            HTVJavascriptInterface.openUrl("www.google.com", true)
-        }
-        function goOutside() {
+        function goiOSOutside() {
             webkit.messageHandlers.segue.postMessage('https://www.amazon.com/');
+        }
+        function goAndroidInside() {
+            HTVJavascriptInterface.openUrlInsideApp('https://www.amazon.com/')
+        }
+        function goAndroidOutside() {
+            HTVJavascriptInterface.openUrlInsideApp('https://www.amazon.com/')
         }
         function isNative() {
             const isNative = localStorage.getItem("isNative");
