--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>    
-    <meta content='width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=YES;' name='viewport'/>
-    <h1>Custom WebView Cell with JS observers</h1>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">    <h1>Custom WebView Cell with JS observers</h1>
     <body onload="checkIfIsRunningInApp()">
         <h2>This web page is running in the <span id="isRunningInApp"></span></h2>
 
