--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
 
         <button onClick='openLink("https://www.amazon.com");'>Link WITH JS EVENT, and IT IS NOT an HTV article, it should open the new page OVER the current article.</button>
         <button onClick='openLink("https://khtvnews.com/article/ios-17-release-new-iphone-features/45195842");'>Link WITH JS EVENT, and IT IS an HTV article, it should open the article inside the app.</button>
-        <button onclick="location.href='https://www.amazon.com'" type="button"> Link WITHOUT JS EVENT, and IT IS NOT an HTV article, it should open the Safari app.</button>
-        <button onclick="location.href='https://khtvnews.com/article/ios-17-release-new-iphone-features/45195842'" type="button"> Link WITHOUT JS EVENT, and IT IS an HTV article, it should open the article inside the app.</button>
+        <a href="https://www.amazon.com">
+            <button>Link WITHOUT JS EVENT, and IT IS NOT an HTV article, it should open the Safari app.</button>
+        </a>
+        <a href="https://khtvnews.com/article/ios-17-release-new-iphone-features/45195842">
+            <button>Link WITHOUT JS EVENT, and IT IS an HTV article, it should open the article inside the app.</button>
+        </a>
+
     </body>
     <script>
         function openInternaliOS(url) {
