--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <button onClick='openLink("https://www.amazon.com");'>Link WITH JS EVENT, and IT IS NOT an HTV article, it should open the new page OVER the current article.</button>
         <button onClick='openLink("https://khtvnews.com/article/ios-17-release-new-iphone-features/45195842");'>Link WITH JS EVENT, and IT IS an HTV article, it should open the article inside the app.</button>
         <a href="https://www.amazon.com">
-            <button>Link WITHOUT JS EVENT, and IT IS NOT an HTV article, it should open the Safari app.</button>
+            Link WITHOUT JS EVENT, and IT IS NOT an HTV article, it should open the Safari app.
         </a>
         <a href="https://khtvnews.com/article/ios-17-release-new-iphone-features/45195842">
-            <button>Link WITHOUT JS EVENT, and IT IS an HTV article, it should open the article inside the app.</button>
+            Link WITHOUT JS EVENT, and IT IS an HTV article, it should open the article inside the app.
         </a>
 
     </body>
