--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             outline: none;
         }
 
-        div {
+        .div {
             height: 40px;
             width: 100%;
             text-align: center;
@@ -26,18 +26,20 @@
     </style>
 </head>
 
-<body>
-    <div>
-        <button class="button" onClick='openLink("https://www.puzzmo.com/today");'>Play in Full Screen</button>
+<body onload="getParameters()">
+    <div class="div" id="buttonDiv">
+        <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
+    <div style=\"position: relative; padding-bottom: 620%; height: 0; overflow: hidden;\"><iframe src=\"https://www.puzzmo.com/today\" scrolling=\"no\" frameborder=\"0\" style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"></iframe></div>
     <script>
+        let url;
         function openInternaliOS(url) {
             webkit.messageHandlers.openFullScreenViewController.postMessage(url);
         }
         function openInternalAndroid(url) {
             AndroidJSInterface.openUrlInsideApp(url);
         }
-        function openLink(url) {
+        function openLink() {
             if (isRunningIniOS()) {
                 openInternaliOS(url);
             }
@@ -60,6 +62,16 @@
                 return AndroidJSInterface.isNative();
             } catch (error) {
                 return false;
+            }
+        }
+        function getParameters() {
+            const urlParams = new URLSearchParams(window.location.search);
+            url = urlParams.get('url');
+            const buttonTitle = urlParams.get('buttonTitle');
+            if (buttonTitle == null) {
+                document.getElementById("buttonDiv").setAttribute("hidden", "hidden");
+            } else {
+                document.getElementById("buttonTitle").innerHTML = buttonTitle;
             }
         }
     </script>
