--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="div" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
-    <div style=\"position: relative; padding-bottom: 620%; height: 0; overflow: hidden;\"><iframe src=\"https://www.puzzmo.com/today\" scrolling=\"no\" frameborder=\"0\" style=\"position: absolute; top: 0; left: 0; width: 100%; height: 100%;\"></iframe></div>
+    <div id="divIframe"></div>
     <script>
         let url;
         function openInternaliOS(url) {
@@ -67,6 +67,12 @@
         function getParameters() {
             const urlParams = new URLSearchParams(window.location.search);
             url = urlParams.get('url');
+
+            var iframe = document.createElement('iframe');
+            iframe.src = url
+            document.getElementById("divIframe").body.appendChild(iframe);
+
+
             const buttonTitle = urlParams.get('buttonTitle');
             if (buttonTitle == null) {
                 document.getElementById("buttonDiv").setAttribute("hidden", "hidden");
