--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             var iframe = document.createElement('iframe');
             iframe.src = url
-            document.getElementById("divIframe").body.appendChild(iframe);
+            document.getElementById("divIframe").appendChild(iframe);
 
 
             const buttonTitle = urlParams.get('buttonTitle');
