--- a/index.html
+++ b/index.html
@@ -23,6 +23,13 @@
             width: 100%;
             text-align: center;
         }
+        iframe {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%
+        }
     </style>
 </head>
 
@@ -30,6 +37,7 @@
     <div class="div" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
+    <br>
     <div id="divIframe"></div>
     <script>
         let url;
