--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <style>
         .button {
@@ -37,7 +36,6 @@
         }
     </style>
 </head>
-
 <body onload="getParameters()">
     <div class="divButton" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
@@ -78,6 +76,11 @@
             }
         }
         function getParameters() {
+            localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
+            localStorage.setItem("has_access", true)
+            localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
+            localStorage.setItem("puzmoUserModel", '{"userState":{"id":"LHmYxxiVUIyYzEB0Ibtka:userstate","ownerID":"LHmYxxiVUIyYzEB0Ibtka","nakamaLogin":"LHmYxxiVUIyYzEB0Ibtka@guest.puzzmo.com","nakamaPassword":"LHmYxxiVUIyYzEB0Ibtka","gameSettings":{},"cookieConsent":null,"policy":"COPPA","country":"US"},"currentUser":null}');
+
             const urlParams = new URLSearchParams(window.location.search);
             url = urlParams.get('url');
 
@@ -95,7 +98,5 @@
             }
         }
     </script>
-
 </body>
-
 </html>
