--- a/index.html
+++ b/index.html
@@ -76,11 +76,7 @@
             }
         }
         function getParameters() {
-            localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
-            localStorage.setItem("has_access", true)
-            localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
-            localStorage.setItem("puzmoUserModel", '{"userState":{"id":"LHmYxxiVUIyYzEB0Ibtka:userstate","ownerID":"LHmYxxiVUIyYzEB0Ibtka","nakamaLogin":"LHmYxxiVUIyYzEB0Ibtka@guest.puzzmo.com","nakamaPassword":"LHmYxxiVUIyYzEB0Ibtka","gameSettings":{},"cookieConsent":null,"policy":"COPPA","country":"US"},"currentUser":null}');
-
+            
             const urlParams = new URLSearchParams(window.location.search);
             url = urlParams.get('url');
 
@@ -96,6 +92,12 @@
             } else {
                 document.getElementById("buttonTitle").innerHTML = buttonTitle;
             }
+
+            // localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
+            // localStorage.setItem("has_access", true)
+            // localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
+            // localStorage.setItem("puzmoUserModel", '{"userState":{"id":"LHmYxxiVUIyYzEB0Ibtka:userstate","ownerID":"LHmYxxiVUIyYzEB0Ibtka","nakamaLogin":"LHmYxxiVUIyYzEB0Ibtka@guest.puzzmo.com","nakamaPassword":"LHmYxxiVUIyYzEB0Ibtka","gameSettings":{},"cookieConsent":null,"policy":"COPPA","country":"US"},"currentUser":null}');
+
         }
     </script>
 </body>
