--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 document.getElementById("buttonTitle").innerHTML = buttonTitle;
             }
 
-            // localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
+            localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
             // localStorage.setItem("has_access", true)
             // localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
             // localStorage.setItem("puzmoUserModel", '{"userState":{"id":"LHmYxxiVUIyYzEB0Ibtka:userstate","ownerID":"LHmYxxiVUIyYzEB0Ibtka","nakamaLogin":"LHmYxxiVUIyYzEB0Ibtka@guest.puzzmo.com","nakamaPassword":"LHmYxxiVUIyYzEB0Ibtka","gameSettings":{},"cookieConsent":null,"policy":"COPPA","country":"US"},"currentUser":null}');
