--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         }
         function getParameters() {
 
-            localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
-            localStorage.setItem("has_access", true)
-            localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
+            window.localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
+            window.localStorage.setItem("has_access", true)
+            window.localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
             const userData =
             {
                 "userState": {
@@ -100,8 +100,8 @@
                 "currentUser": null
             }
                 ;
-            localStorage.setItem("puzmoUserModel", JSON.stringify(userData));
-            
+            window.localStorage.setItem("puzmoUserModel", JSON.stringify(userData));
+
             const urlParams = new URLSearchParams(window.location.search);
             url = urlParams.get('url');
 
