--- a/index.html
+++ b/index.html
@@ -82,9 +82,18 @@
         }
         function getParameters() {
 
-            window.localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
-            window.localStorage.setItem("has_access", true)
-            window.localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
+            
+
+            const urlParams = new URLSearchParams(window.location.search);
+            url = urlParams.get('url');
+
+            var iframe = document.createElement('iframe');
+            iframe.src = url
+            iframe.scrolling = "no"
+            iframe.frameBorder = "0"
+            iframe.localStorage.setItem("puzmoGameplayIDFallback", "LHmYxxiVUIyYzEB0Ibtka");
+            iframe.localStorage.setItem("has_access", true)
+            iframe.localStorage.setItem("EXPO_CONSTANTS_INSTALLATION_ID", "cced9ef2-504b-48dd-b5fd-686116dcfd6d")
             const userData =
             {
                 "userState": {
@@ -100,16 +109,8 @@
                 "currentUser": null
             }
                 ;
-            window.localStorage.setItem("puzmoUserModel", JSON.stringify(userData));
+            iframe.localStorage.setItem("puzmoUserModel", JSON.stringify(userData));
 
-            const urlParams = new URLSearchParams(window.location.search);
-            url = urlParams.get('url');
-
-            var iframe = document.createElement('iframe');
-            iframe.src = url
-            iframe.scrolling = "no"
-            iframe.frameBorder = "0"
-            iframe.localStorage = localStorage
             document.getElementById("divIframe").appendChild(iframe);
 
             const buttonTitle = urlParams.get('buttonTitle');
