--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
-            var localData = localDataStorage('puzzmo.com');
+            var localData = localDataStorage(url);
             const userData =
             {
                 "userState": {
