--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             top: 0;
             left: 0;
             width: 100%;
-            height: 100%
+            height: 100%;
+            pointer-events: none;
         }
     </style>
 </head>
