--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             padding-bottom: 620%;
             height: 0;
             overflow: hidden;
+            z-index: 9999;
         }
         iframe {
             position: absolute;
@@ -42,7 +43,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            /* pointer-events: none; */
+            pointer-events: none;
         }
     </style>
 </head>
@@ -51,12 +52,9 @@
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
     <br>
-    <div class="divIframe" id="divIframe"></div>
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
+    <div class="divIframe" id="divIframe"></div>
     <script>
-        window.addEventListener("mouseup", (e) => {
-            openLink();
-        });
         let url;
         function openInternaliOS(url) {
             webkit.messageHandlers.openFullScreenViewController.postMessage(url);
