--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </div>
     <br>
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
-    <div class="divIframe" id="divIframe"></div>
+    <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
         let url;
         function openInternaliOS(url) {
