--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
             var iframe = document.createElement('iframe');
             iframe.src = url
-            iframe.scrolling = "no"
+            // iframe.scrolling = "no"
             iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
