--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             width: 100%;
             height: 1000;
             pointer-events: none;
+            border:2px solid red;
         }
     </style>
 </head>
@@ -94,7 +95,7 @@
 
             var iframe = document.createElement('iframe');
             iframe.src = url
-            iframe.scrolling = "yes"
+            // iframe.scrolling = "yes"
             // iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
