--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             top: 100;
             left: 100;
             width: 100%;
-            height: 1000;
+            height: 100%;
             pointer-events: none;
             border:2px solid red;
         }
