--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         }
         iframe {
             position: absolute;
-            top: 100;
-            left: 100;
+            top: 0;
+            left: 0;
             width: 100%;
             height: 100%;
             pointer-events: none;
@@ -95,8 +95,8 @@
 
             var iframe = document.createElement('iframe');
             iframe.src = url
-            // iframe.scrolling = "yes"
-            // iframe.frameBorder = "0"
+            iframe.scrolling = "yes"
+            iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
             const buttonTitle = urlParams.get('buttonTitle');
