--- a/index.html
+++ b/index.html
@@ -48,11 +48,11 @@
     </style>
 </head>
 <body onload="getParameters()">
-    <div class="divButton" id="buttonDiv">
+    <!-- <div class="divButton" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
-    <br>
-    <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
+    <br> -->
+    <!-- <div class="divOverlay" id="divOverlay" onClick='openLink();'></div> -->
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
         let url;
