--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             z-index: 9999;
         }
         iframe {
-            /* position: absolute; */
-            top: 100;
-            left: 0;
+            position: absolute;
+            top: 40px;
             width: 100%;
             height: 100%;
             pointer-events: none;
