--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         }
         .divIframe {
             position: relative;
-            padding-bottom: 620%;
-            height: 0;
+            /* padding-bottom: 620%; */
+            /* height: 0; */
             overflow: hidden;
             z-index: 9999;
         }
