--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             opacity: 0;
         }
         .divIframe {
-            position: relative;
+            /* position: relative; */
             /* padding-bottom: 620%; */
             /* height: 0; */
             overflow: hidden;
@@ -43,6 +43,7 @@
             width: 100%;
             height: 100%;
             pointer-events: none;
+            border: none;
         }
     </style>
 </head>
