--- a/index.html
+++ b/index.html
@@ -24,16 +24,11 @@
         .divOverlay {
             position: absolute;
             top: 60px;
-            left: 0;
             height: 100%;
             width: 100%;
-            text-align: center;
             opacity: 0;
         }
         .divIframe {
-            /* position: relative; */
-            /* padding-bottom: 620%; */
-            /* height: 0; */
             overflow: hidden;
             z-index: 9999;
         }
@@ -53,7 +48,7 @@
     </div>
     <br>
     
-    <!-- <div class="divOverlay" id="divOverlay" onClick='openLink();'></div> -->
+    <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
         let url;
