--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <style>
+        .body {
+            border: none;
+        }
         .button {
             color: #0066cc;
             padding: 15px 32px;
