--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         }
     </style>
 </head>
-<body onload="getParameters()">
+<body draggable="false" onload="getParameters()">
     <div class="divButton" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>    
     </div>
