--- a/index.html
+++ b/index.html
@@ -44,12 +44,10 @@
         }
     </style>
 </head>
-<body onload="getParameters()">
+<body draggable="false" onload="getParameters()">
     <div draggable="false" class="divButton" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>    
     </div>
-    <br>
-    
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
