--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body draggable="false" onload="getParameters()">
     <div draggable="false" class="divButton" id="buttonDiv">
-        <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>    
+        <span id="buttonTitle"></span>
     </div>
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
