--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
     </style>
 </head>
 <body draggable="false" onload="getParameters()">
-    <div draggable="false" class="divButton" id="buttonDiv">
+    <!-- <div draggable="false" class="divButton" id="buttonDiv">
         <span id="buttonTitle"></span>
-    </div>
+    </div> -->
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
