--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
             var iframe = document.createElement('iframe');
             iframe.src = url
-            iframe.scrolling = "yes"
-            iframe.frameBorder = "0"
+            // iframe.scrolling = "yes"
+            // iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
             const buttonTitle = urlParams.get('buttonTitle');
