--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             var iframe = document.createElement('iframe');
             iframe.src = url
             // iframe.scrolling = "yes"
-            // iframe.frameBorder = "0"
+            iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
             const buttonTitle = urlParams.get('buttonTitle');
