--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- <div draggable="false" class="divButton" id="buttonDiv">
         <span id="buttonTitle"></span>
     </div> -->
-    <!-- <div class="divOverlay" id="divOverlay" onClick='openLink();'></div> -->
+    <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
         let url;
