--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
         .divIframe {
             z-index: 9999;
         }
+         */
         iframe {
-            overflow: hidden;
-            position: absolute;
-            top: 0px;
+            /* overflow: hidden; */
+            /* position: absolute; */
+            /* top: 0px; */
             width: 100%;
             height: 100%;
-            pointer-events: none;
-            border: none;
-        } */
+            /* pointer-events: none; */
+            /* border: none; */
+        }
     </style>
 </head>
 <body draggable="false" onload="getParameters()">
