--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             /* position: absolute; */
             /* top: 0px; */
             width: 100%;
-            height: 100%;
+            height: 1000px;
             /* pointer-events: none; */
             /* border: none; */
         }
