--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
     </style>
 </head>
 <body draggable="false" onload="getParameters()">
-    <!-- <div draggable="false" class="divButton" id="buttonDiv">
-        <span id="buttonTitle"></span>
-    </div> -->
+    <div draggable="false" class="divButton" id="buttonDiv">
+        <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
+    </div>
     <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
     <div class="divIframe" id="divIframe" onClick='openLink();'></div>
     <script>
