add buttom layout

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <style>
-        /* .body {
-            border: none;
-        }
+         /* .body { */
+            /* border: none; */
+        /* } */
         .button {
             color: #0066cc;
             padding: 15px 32px;
@@ -19,6 +19,7 @@
             background-color: transparent;
             outline: none;
         }
+        /*
         .divButton {
             height: 40px;
             text-align: center;
