--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         }
         
         .divOverlay {
-            /* position: absolute; */
+            position: static;
             height: 100%;
             width: 100%;
         }
