--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         
         .divOverlay {
             position: static;
-            height: 100%;
+            height: 1000px;
             width: 100%;
         }
         
