--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
         
         .divOverlay {
             position: static;
-            height: 1000px;
-            width: 100%;
         }
         
         .divIframe {
@@ -48,8 +46,9 @@
     <div draggable="false" class="divButton" id="buttonDiv">
         <button class="button" onClick='openLink();'><span id="buttonTitle"></span></button>
     </div>
-    <div class="divOverlay" id="divOverlay" onClick='openLink();'></div>
-    <div class="divIframe" id="divIframe" onClick='openLink();'></div>
+    <div class="divOverlay" id="divOverlay" onClick='openLink();'>
+        <div class="divIframe" id="divIframe" onClick='openLink();'></div>
+    </div>
     <script>
         let url;
         function openInternaliOS(url) {
