--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             position: static;
         }
         .divIframe {
+            pointer-events: none;
         }
         iframe {
             width: 100%;
