--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
             iframe.frameBorder = "0"
             document.getElementById("divIframe").appendChild(iframe);
 
-            // if (isRunningIniOS() || isRunningInAndroid()) {
-            //     document.getElementById("divOverlay").style.pointerEvents = "none";
-            // }
+            if (!isRunningIniOS() || !isRunningInAndroid()) {
+                document.getElementById("divOverlay").style.pointerEvents = "all";
+            }
 
             const buttonTitle = urlParams.get('buttonTitle');
             if (buttonTitle == null) {
