--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
             position: static;
         }
         .divIframe {
-            pointer-events: none;
         }
         iframe {
             width: 100%;
@@ -81,11 +80,12 @@
             iframe.src = url
             iframe.scrolling = "yes"
             iframe.frameBorder = "0"
-            document.getElementById("divIframe").appendChild(iframe);
 
-            if (!isRunningIniOS() || !isRunningInAndroid()) {
-                document.getElementById("divOverlay").style.pointerEvents = "all";
+            if (isRunningIniOS() || isRunningInAndroid()) {
+                iframe.style.pointerEvents = "none";
             }
+
+            document.getElementById("divIframe").appendChild(iframe);
 
             const buttonTitle = urlParams.get('buttonTitle');
             if (buttonTitle == null) {
